2011-10-10  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.cc (print_usage): Align output to utilities in utils
	directory.
	(print_version): Ditto.

2011-08-18  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* sysv_shm.cc (ACCESSPERMS): Remove to fix redefined warning, as
	this is now defined in <sys/stat.h>.

2011-02-07  Corinna Vinschen  <corinna@vinschen.de>

	* configure.in: Remove AC_ALLOCA test and test for __builtin_memset.
	* configure: Regenerate.

2010-04-19  Christopher Faylor  <me+cygwin@cgf.cx>

	* transport_pipes.cc: Include ntdef.h to accommodate cygerrno.h.

2009-11-16  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (cygserver.exe): Link with -static to avoid linking
	against cygstdc++-6.dll due to references to __cxa_pure_virtual.

2009-11-06  Corinna Vinschen  <corinna@vinschen.de>

	* transport_pipes.cc (transport_layer_pipes::transport_layer_pipes):
	Check cygwin_internal for returning 0 rather than for != 0.
	(transport_layer_pipes::accept): Add debug output.
	(transport_layer_pipes::connect): Ditto.

2009-10-31  Corinna Vinschen  <corinna@vinschen.de>

	* transport_pipes.h (PIPE_NAME_PREFIX): New define.
	(PIPE_NAME_SUFFIX): Ditto.
	(class transport_layer_pipes): Convert _pipe_name from char pointer
	to wchar_t array.
	* transport_pipes.cc (transport_layer_pipes::transport_layer_pipes):
	Accommodate the fact that _pipe_name is a wchar_t array, rather than
	a char pointer.
	(transport_layer_pipes::transport_layer_pipes): Initialize _pipe_name
	with variable pipe name based in installation key fetched from Cygwin
	DLL.
	(transport_layer_pipes::accept): Call CreateNamedPipeW explicitely.
	(transport_layer_pipes::connect): Call CreateFileW and WaitNamedPipeW
	explicitely.

2009-08-18  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (CXXFLAGS): Allow override.

2009-03-26  Yaakov Selkowitz  <yselkowitz@cygwin.com>

	* README: Remove "How to use" section, as CYGWIN="server" is
	no longer required.
